--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -5,7 +5,7 @@
     <head th:replace="fragments/components::head('Cart')"></head>
     <body>
         <!-- fm-content -->
-        <div class="container-fluid fm-content bg-light">
+        <div class="container-fluid fm-content">
             <!-- header -->
             <div th:replace="fragments/components::header"></div>
             <!-- main categories -->
